# src/controllers/auth.controller.ts
@@ -22,8 +22,32 @@ const registerValidateSchema = Yup.object({
     fullName: Yup.string().required('Full name is required'),
     username: Yup.string().required('Username is required'),
     email: Yup.string().email('Invalid email').required('Email is required'),
-    password: Yup.string().required('Password is required'),
-    confirmPassword: Yup.string().required('Confirm password is required').oneOf([Yup.ref("password"), ""], "Password not match"),
+
+    password: Yup.string()
+        .required()
+        .min(6, "Password must be at least 6 characters!")
+        .test(
+            'at-least-one-uppercase-letter',
+            "Contains at least one uppercase letter",
+            (value) => {
+                if (!value) return false;
+                const regex = /^(?=.*[A-Z])/;
+                return regex.test(value);
+            }
+        )
+        .test(
+            'at-least-one-number',
+            "Contains at least one number",
+            (value) => {
+                if (!value) return false;
+                const regex = /^(?=.*\d)/;
+                return regex.test(value);
+            }
+        ),
+
+    confirmPassword: Yup.string()
+        .required('Confirm password is required')
+        .oneOf([Yup.ref("password"), ""], "Password not match"),
 })
 
 export default {
@@ -83,7 +107,8 @@ export default {
                     {
                         username: identifier
                     },
-                ]
+                ],
+                isActive: true,
             });
 
             if (!userByIdentifier) {
@@ -145,4 +170,40 @@ export default {
         }
     },
 
+    async activation(req: Request, res: Response) {
+
+        /**
+         #swagger.tags = ['Auth']
+         #swagger.requestBody = {
+            required: true,
+            schema: {$ref: '#/components/schemas/ActivationRequest'}
+         }
+         */
+
+        try {
+            const { code } = req.body as { code: string };
+
+            const user = await UserModel.findOneAndUpdate(
+                {
+                    activationCode: code,
+                }, 
+                {
+                    isActive: true,
+                },
+                {
+                    new: true,
+                },
+            );
+            res.status(200).json({
+                message: "user successfully activated",
+                data: user,
+            });
+        } catch (error) {
+            const err = error as unknown as Error;
+            res.status(400).json({
+                message: err.message,
+                data: null,
+            });
+        }
+    },
 };
