# src/docs/swagger_output.json
@@ -124,6 +124,37 @@
           }
         ]
       }
+    },
+    "/auth/activation": {
+      "post": {
+        "tags": [
+          "Auth"
+        ],
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ActivationRequest"
+              }
+            },
+            "application/xml": {
+              "schema": {
+                "$ref": "#/components/schemas/ActivationRequest"
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -148,6 +179,46 @@
         },
         "xml": {
           "name": "LoginRequest"
+        }
+      },
+      "registerRequest": {
+        "type": "object",
+        "properties": {
+          "fullName": {
+            "type": "string",
+            "example": "Haikal Mabrur"
+          },
+          "username": {
+            "type": "string",
+            "example": "Haikaru"
+          },
+          "email": {
+            "type": "string",
+            "example": "me@haikaldev.my.id"
+          },
+          "password": {
+            "type": "string",
+            "example": "1234"
+          },
+          "confirmPassword": {
+            "type": "string",
+            "example": "1234"
+          }
+        },
+        "xml": {
+          "name": "registerRequest"
+        }
+      },
+      "ActivationRequest": {
+        "type": "object",
+        "properties": {
+          "code": {
+            "type": "string",
+            "example": "abcdef"
+          }
+        },
+        "xml": {
+          "name": "ActivationRequest"
         }
       }
     }
